--- a/index.html
+++ b/index.html
@@ -1,46 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Konkan Foods</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </head>
+
 <body>
-    <div class="bgimg">
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-            <div class="container">
-                <a href="" class="navbar-brand text-warning font-weight-bold">
-                KONKAN FOOD SAFARI  
-                </a>
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+        <div class="container">
+            <a href="" class="navbar-brand text-warning font-weight-bold">
+                KONKAN FOOD SAFARI
+            </a>
 
-                <div class="collapse navbar-collapse text-center" id="collapsenavbar">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
-                            <a href="" class="nav-link text-white">ABOUT</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="" class="nav-link text-white">CONTACT</a>
-                        </li>
-                    </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsenavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse text-center" id="collapsenavbar">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="" class="nav-link text-white">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="" class="nav-link text-white">CONTACT</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+        </ol>
+
+        <div class="carousel-inner">
+
+            <div class="carousel-item active">
+                <img src="./img/mainImage.jpg" class="d-block w-100 sliderimg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-warning">Konkan Food Safari</h1>
+                    <h2 class="text-warning"></h2>
                 </div>
             </div>
-        </nav>
 
-        <div class="container text-center headerset text-warning">
-            <h2>Welcome!</h2>
-            <h1>TO KONKAN FOOD SAFARI</h1>
+            <div class="carousel-item">
+                <img src="./img/mangobasket.jpg" class="d-block w-100 sliderimg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-warning"></h1>
+                    <h2 class="text-warning"></h2>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="./img/jacktree.jpg" class="d-block w-100 sliderimg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-warning"></h1>
+                    <h2 class="text-warning"></hp>
+                </div>
+            </div>
+
+            <div class="carousel-item">
+                <img src="./img/bluberry.jpg" class="d-block w-100 sliderimg">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="text-warning"></h1>
+                    <h2 class="text-warning"></hp>
+                </div>
+            </div>
+
         </div>
 
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+
     </div>
+
+
 </body>
+
 </html>
