final home page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top p-3">
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top p-2">
 
     <div class="container">
       <a href="" class="navbar-brand text-warning font-weight-bold">
@@ -50,7 +50,7 @@
 
     <section class="jumbotron text-center">
       <div class="container">
-        <h1 id="head">THE KONKAN WORLD</h1>
+        <h1 id="head">KONKAN FOOD SAFARI</h1>
         <p class="lead text-muted">|Our products are only available for Shivtejnagar,pimpri-chinchwad residents!!!|</p>
       </div>
     </section>
@@ -65,7 +65,7 @@
               <div class="card-body">
                 <h4 class="text-center">AMRAS</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -76,7 +76,7 @@
               <div class="card-body">
                 <h4 class="text-center">KAJU</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -87,7 +87,7 @@
               <div class="card-body">
                 <h4 class="text-center">JACKFRUIT</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <div class="card-body">
                 <h4 class="text-center">KARVANDA</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -109,7 +109,7 @@
               <div class="card-body">
                 <h4 class="text-center">MANGO</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
               <div class="card-body">
                 <h4 class="text-center">JAMUN JUICE</h4>
                 <h6 class="card-text text-center">300 Rs / KG</h6>
-                <button class="btn btn-primary container">Book Now</button>
+                <a href="./templates/store.html"><button class="btn btn-primary container">Book Now</button></a>
               </div>
             </div>
           </div>
@@ -133,8 +133,11 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 id="head"></h1>
-      <p class="lead text-muted"></p>
+      <h1>Visit our Store</h1>
+      <p class="lead text-muted">click on the button bellow to view all the products originally brought 
+        from Sindhudurg.
+      </p>
+      <a href="./templates/store.html"><button class="btn btn-danger text-white" id="view-btn">VIEW</button></a>
     </div>
   </section>
 
@@ -169,8 +172,7 @@
         <img src="./img/jacktree.jpg" class="d-block w-100 sliderimg">
         <div class="carousel-caption d-none d-md-block">
           <h1 class="text-warning"></h1>
-          <h2 class="text-warning">
-            </hp>
+          <h2 class="text-warning"></h2>
         </div>
       </div>
 
@@ -178,8 +180,7 @@
         <img src="./img/bluberry.jpg" class="d-block w-100 sliderimg">
         <div class="carousel-caption d-none d-md-block">
           <h1 class="text-warning"></h1>
-          <h2 class="text-warning">
-            </hp>
+          <h2 class="text-warning"></h2>
         </div>
       </div>
 
@@ -195,6 +196,12 @@
     </a>
 
   </div>
+
+  <section class="jumbotron text-center">
+    <div class="container">
+      <h4>Thanks for visiting</h4>
+    </div>
+  </section>
 
 </body>
 
